--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_Open_AI_Key = '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'
+VITE_Open_AI_Key = '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'
