--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
     "axios": "^1.5.0",
+    "formik": "^2.4.5",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
-    "rollup-plugin-react-scoped-css": "^0.8.2"
+    "rollup-plugin-react-scoped-css": "^0.8.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
