--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.8.1",
     "axios": "^1.5.0",
     "formik": "^2.4.5",
+    "formik-material-ui": "^4.0.0-alpha.2",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
